smalles strongly connected component example

--- a/minimdo/structure_optim/minscc.ipynb
+++ b/minimdo/structure_optim/minscc.ipynb
@@ -565,54 +565,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "id": "57fd6175-53b1-41c8-a760-7388c567ed0c",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-06-28T18:32:59.231776Z",
-     "iopub.status.busy": "2022-06-28T18:32:59.230776Z",
-     "iopub.status.idle": "2022-06-28T18:32:59.240757Z",
-     "shell.execute_reply": "2022-06-28T18:32:59.239780Z",
-     "shell.execute_reply.started": "2022-06-28T18:32:59.231776Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "def handle_component(allendcomps, queue, component, parent, endcompqueue, mergeendcomp=True):\n",
-    "    remainingcomps = len([elt for elt in solver_children(queue, parent)])\n",
-    "    lastchildcomp = remainingcomps==0\n",
-    "    if lastchildcomp:\n",
-    "        if mergeendcomp:\n",
-    "            lastcomponent = [component] if component in allendcomps else []\n",
-    "            endcomps_ids = endcompqueue+lastcomponent\n",
-    "            if endcomps_ids:\n",
-    "                endcomps = [(ENDCOMP, endcomps_ids, parent)]\n",
-    "            else:\n",
-    "                endcomps = []\n",
-    "        else:\n",
-    "            lastcomponent = [(ENDCOMP, component, parent)] if component in allendcomps else []\n",
-    "            endcomps = [(ENDCOMP, comps, parent) for comps in endcompqueue]+lastcomponent\n",
-    "        if component not in allendcomps:\n",
-    "            return [(COMP, component, parent)] + endcomps, []\n",
-    "        else:\n",
-    "            return endcomps, []\n",
-    "    if component not in allendcomps: \n",
-    "           return [(COMP, component, parent)], endcompqueue\n",
-    "    else:\n",
-    "        return None, endcompqueue+[component]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 107,
    "id": "1a70f417-fa8d-4d69-a230-9476459ece4c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-06-28T18:38:24.036495Z",
-     "iopub.status.busy": "2022-06-28T18:38:24.036495Z",
-     "iopub.status.idle": "2022-06-28T18:38:24.040729Z",
-     "shell.execute_reply": "2022-06-28T18:38:24.040729Z",
-     "shell.execute_reply.started": "2022-06-28T18:38:24.036495Z"
+     "iopub.execute_input": "2022-06-28T18:48:50.978082Z",
+     "iopub.status.busy": "2022-06-28T18:48:50.977546Z",
+     "iopub.status.idle": "2022-06-28T18:48:50.984521Z",
+     "shell.execute_reply": "2022-06-28T18:48:50.984521Z",
+     "shell.execute_reply.started": "2022-06-28T18:48:50.978082Z"
     },
     "tags": []
    },
@@ -620,40 +581,40 @@
    "source": [
     "Ftree = [(0,0), (1,1),(2,2),(3,2),(4,1,),(5,1),(6,1),(7,0),(8,0)]\n",
     "Stree = {2:1, 1:0}\n",
-    "endcomps = {comp: comp in [0,2,5,6] for comp,_ in Ftree}"
+    "endcomps = {comp: comp in [0,2,5,7] for comp,_ in Ftree}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 108,
    "id": "76b92264-a13c-4b33-b3b2-dbbbf892cfcc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-06-28T18:47:46.395197Z",
-     "iopub.status.busy": "2022-06-28T18:47:46.395197Z",
-     "iopub.status.idle": "2022-06-28T18:47:46.402976Z",
-     "shell.execute_reply": "2022-06-28T18:47:46.401197Z",
-     "shell.execute_reply.started": "2022-06-28T18:47:46.395197Z"
+     "iopub.execute_input": "2022-06-28T18:48:51.340729Z",
+     "iopub.status.busy": "2022-06-28T18:48:51.340729Z",
+     "iopub.status.idle": "2022-06-28T18:48:51.348502Z",
+     "shell.execute_reply": "2022-06-28T18:48:51.348502Z",
+     "shell.execute_reply.started": "2022-06-28T18:48:51.340729Z"
     },
     "tags": []
    },
    "outputs": [],
    "source": [
-    "includesolver = True\n",
-    "mergeendcomp = True"
+    "includesolver = False\n",
+    "mergeendcomp = False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 109,
    "id": "270b0f2c-390e-4112-9367-2a2aba2554b6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-06-28T18:47:46.664261Z",
-     "iopub.status.busy": "2022-06-28T18:47:46.663252Z",
-     "iopub.status.idle": "2022-06-28T18:47:46.683238Z",
-     "shell.execute_reply": "2022-06-28T18:47:46.683238Z",
-     "shell.execute_reply.started": "2022-06-28T18:47:46.664261Z"
+     "iopub.execute_input": "2022-06-28T18:48:51.529796Z",
+     "iopub.status.busy": "2022-06-28T18:48:51.529796Z",
+     "iopub.status.idle": "2022-06-28T18:48:51.552780Z",
+     "shell.execute_reply": "2022-06-28T18:48:51.552780Z",
+     "shell.execute_reply.started": "2022-06-28T18:48:51.529796Z"
     },
     "tags": []
    },
@@ -685,15 +646,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 110,
    "id": "60eea70d-4982-4b43-91bb-fae9c820f595",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-06-28T18:47:47.004605Z",
-     "iopub.status.busy": "2022-06-28T18:47:47.004605Z",
-     "iopub.status.idle": "2022-06-28T18:47:47.013673Z",
-     "shell.execute_reply": "2022-06-28T18:47:47.013673Z",
-     "shell.execute_reply.started": "2022-06-28T18:47:47.004605Z"
+     "iopub.execute_input": "2022-06-28T18:48:51.884943Z",
+     "iopub.status.busy": "2022-06-28T18:48:51.884943Z",
+     "iopub.status.idle": "2022-06-28T18:48:51.902938Z",
+     "shell.execute_reply": "2022-06-28T18:48:51.902619Z",
+     "shell.execute_reply.started": "2022-06-28T18:48:51.884943Z"
     },
     "tags": []
    },
@@ -701,20 +662,18 @@
     {
      "data": {
       "text/plain": [
-       "[(SOLVER, 0, None),\n",
-       " (SOLVER, 1, 0),\n",
-       " (COMP, 1, 1),\n",
-       " (SOLVER, 2, 1),\n",
+       "[(COMP, 1, 1),\n",
        " (COMP, 3, 2),\n",
-       " (ENDCOMP, [2], 2),\n",
+       " (ENDCOMP, 2, 2),\n",
        " (COMP, 4, 1),\n",
-       " (ENDCOMP, [5, 6], 1),\n",
-       " (COMP, 7, 0),\n",
+       " (COMP, 6, 1),\n",
+       " (ENDCOMP, 5, 1),\n",
        " (COMP, 8, 0),\n",
-       " (ENDCOMP, [0], 0)]"
+       " (ENDCOMP, 0, 0),\n",
+       " (ENDCOMP, 7, 0)]"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
