bugfix for ordering, better HSM, experiments

--- a/minimdo/debug/workflow.ipynb
+++ b/minimdo/debug/workflow.ipynb
@@ -3,40 +3,22 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "85dd716d-dfb7-45d4-adf9-2d249f45205c",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-06-28T18:54:23.651653Z",
-     "iopub.status.busy": "2022-06-28T18:54:23.651653Z",
-     "iopub.status.idle": "2022-06-28T18:54:23.666673Z",
-     "shell.execute_reply": "2022-06-28T18:54:23.665664Z",
-     "shell.execute_reply.started": "2022-06-28T18:54:23.651653Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "from collections import OrderedDict"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
    "id": "ff4662d1-1200-4e4a-af1d-a97b4df558e3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-06-28T18:56:20.212180Z",
-     "iopub.status.busy": "2022-06-28T18:56:20.211179Z",
-     "iopub.status.idle": "2022-06-28T18:56:22.131080Z",
-     "shell.execute_reply": "2022-06-28T18:56:22.130180Z",
-     "shell.execute_reply.started": "2022-06-28T18:56:20.212180Z"
+     "iopub.execute_input": "2022-07-11T15:56:21.754234Z",
+     "iopub.status.busy": "2022-07-11T15:56:21.754234Z",
+     "iopub.status.idle": "2022-07-11T15:56:28.577176Z",
+     "shell.execute_reply": "2022-07-11T15:56:28.576340Z",
+     "shell.execute_reply.started": "2022-07-11T15:56:21.754234Z"
     },
     "tags": []
    },
    "outputs": [],
    "source": [
-    "from datastructures.workflow import SOLVER, COMP, ENDCOMP, path\n",
+    "from datastructures.workflow import SOLVER, COMP, ENDCOMP, path, order_from_tree\n",
     "from datastructures.graphutils import end_components, solver_children\n",
-    "from collections import defaultdict"
+    "from collections import OrderedDict, defaultdict"
    ]
   },
   {
@@ -49,15 +31,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "f73aed7b-51bc-492b-a093-3471bc99fe1a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-06-28T18:55:47.364884Z",
-     "iopub.status.busy": "2022-06-28T18:55:47.364884Z",
-     "iopub.status.idle": "2022-06-28T18:55:47.383082Z",
-     "shell.execute_reply": "2022-06-28T18:55:47.382966Z",
-     "shell.execute_reply.started": "2022-06-28T18:55:47.364884Z"
+     "iopub.execute_input": "2022-07-11T15:56:31.123983Z",
+     "iopub.status.busy": "2022-07-11T15:56:31.123104Z",
+     "iopub.status.idle": "2022-07-11T15:56:31.136708Z",
+     "shell.execute_reply": "2022-07-11T15:56:31.136122Z",
+     "shell.execute_reply.started": "2022-07-11T15:56:31.123831Z"
     },
     "tags": []
    },
@@ -70,35 +52,93 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4bc0188f-2ec9-4faa-83ec-dad103754e77",
+   "metadata": {},
+   "source": [
+    "### Test method from library"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "511e2cf0-af19-44e7-9a49-cf9ab8cf6257",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-07-11T15:56:31.607593Z",
+     "iopub.status.busy": "2022-07-11T15:56:31.607593Z",
+     "iopub.status.idle": "2022-07-11T15:56:31.627155Z",
+     "shell.execute_reply": "2022-07-11T15:56:31.625923Z",
+     "shell.execute_reply.started": "2022-07-11T15:56:31.607593Z"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(SOLVER, 0, None),\n",
+       " (SOLVER, 1, 0),\n",
+       " (COMP, 1, 1),\n",
+       " (SOLVER, 2, 1),\n",
+       " (COMP, 3, 2),\n",
+       " (ENDCOMP, 2, 2),\n",
+       " (COMP, 4, 1),\n",
+       " (COMP, 6, 1),\n",
+       " (ENDCOMP, 5, 1),\n",
+       " (COMP, 8, 0),\n",
+       " (ENDCOMP, 0, 0),\n",
+       " (ENDCOMP, 7, 0)]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "order_from_tree(Ftree, Stree, Eout, mergeendcomp=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "289560f5-d97d-47f3-b891-04d37ba6e75b",
+   "metadata": {},
+   "source": [
+    "### Debug method"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "0e18daba-3332-4ac0-8de0-652a71935883",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-06-28T18:55:55.026590Z",
-     "iopub.status.busy": "2022-06-28T18:55:55.026088Z",
-     "iopub.status.idle": "2022-06-28T18:55:55.034590Z",
-     "shell.execute_reply": "2022-06-28T18:55:55.034590Z",
-     "shell.execute_reply.started": "2022-06-28T18:55:55.026590Z"
-    }
+     "iopub.execute_input": "2022-07-11T15:56:32.391881Z",
+     "iopub.status.busy": "2022-07-11T15:56:32.391881Z",
+     "iopub.status.idle": "2022-07-11T15:56:32.405932Z",
+     "shell.execute_reply": "2022-07-11T15:56:32.405767Z",
+     "shell.execute_reply.started": "2022-07-11T15:56:32.391881Z"
+    },
+    "tags": []
    },
    "outputs": [],
    "source": [
-    "includesolver = False\n",
+    "includesolver = True\n",
     "mergeendcomp = False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "a3f2e803-1c56-4daf-be6e-60c520f2e86b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-06-28T18:56:54.479671Z",
-     "iopub.status.busy": "2022-06-28T18:56:54.479671Z",
-     "iopub.status.idle": "2022-06-28T18:56:54.497697Z",
-     "shell.execute_reply": "2022-06-28T18:56:54.497697Z",
-     "shell.execute_reply.started": "2022-06-28T18:56:54.479671Z"
+     "iopub.execute_input": "2022-07-11T15:56:32.661642Z",
+     "iopub.status.busy": "2022-07-11T15:56:32.661642Z",
+     "iopub.status.idle": "2022-07-11T15:56:32.688573Z",
+     "shell.execute_reply": "2022-07-11T15:56:32.687032Z",
+     "shell.execute_reply.started": "2022-07-11T15:56:32.661642Z"
     },
     "tags": []
    },
@@ -123,7 +163,7 @@
     "    remainingcomps = len([elt for elt in solver_children(dict(queue), parent)])\n",
     "    lastchildcomp = remainingcomps==0\n",
     "    if lastchildcomp:\n",
-    "        if mergeendcomp:\n",
+    "        if mergeendcomp and endcompqueue.get(parent,False):\n",
     "            sequence += [(ENDCOMP, endcompqueue[parent], parent)]\n",
     "        else:\n",
     "            sequence += [(ENDCOMP, endcomp, parent) for endcomp in endcompqueue[parent]]"
@@ -131,22 +171,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "4e71e314-ba42-4a71-86d5-dc97417492f0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-06-28T18:57:01.216969Z",
-     "iopub.status.busy": "2022-06-28T18:57:01.215969Z",
-     "iopub.status.idle": "2022-06-28T18:57:01.235313Z",
-     "shell.execute_reply": "2022-06-28T18:57:01.235313Z",
-     "shell.execute_reply.started": "2022-06-28T18:57:01.216969Z"
-    }
+     "iopub.execute_input": "2022-07-11T15:56:33.342716Z",
+     "iopub.status.busy": "2022-07-11T15:56:33.342716Z",
+     "iopub.status.idle": "2022-07-11T15:56:33.363795Z",
+     "shell.execute_reply": "2022-07-11T15:56:33.363146Z",
+     "shell.execute_reply.started": "2022-07-11T15:56:33.342716Z"
+    },
+    "tags": []
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(COMP, 1, 1),\n",
+       "[(SOLVER, 0, None),\n",
+       " (SOLVER, 1, 0),\n",
+       " (COMP, 1, 1),\n",
+       " (SOLVER, 2, 1),\n",
        " (COMP, 3, 2),\n",
        " (ENDCOMP, 2, 2),\n",
        " (COMP, 4, 1),\n",
@@ -157,7 +201,7 @@
        " (ENDCOMP, 7, 0)]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,21 +209,13 @@
    "source": [
     "sequence"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dd527e20-3fca-44a6-81dc-0137c6c46f5a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:mdo]",
+   "display_name": "Python [conda env:minimdo]",
    "language": "python",
-   "name": "conda-env-mdo-py"
+   "name": "conda-env-minimdo-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -191,7 +227,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
