--- a/minimdo/examples/gs_order.ipynb
+++ b/minimdo/examples/gs_order.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "10e9f1c7-a298-48b4-8007-3d7232052063",
+   "metadata": {},
+   "source": [
+    "# Gauss-Seidel order"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 115,
    "id": "b4ebe797-9396-4bd4-974c-7a11b3d89464",
@@ -630,7 +638,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
