--- a/minimdo/examples/motivationcvx.ipynb
+++ b/minimdo/examples/motivationcvx.ipynb
@@ -2,21 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "87d81a13-7520-4ee9-984d-f9f0877e24c6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-06-24T18:56:05.198860Z",
-     "iopub.status.busy": "2022-06-24T18:56:05.197862Z",
-     "iopub.status.idle": "2022-06-24T18:56:05.552014Z",
-     "shell.execute_reply": "2022-06-24T18:56:05.552014Z",
-     "shell.execute_reply.started": "2022-06-24T18:56:05.198860Z"
-    }
+     "iopub.execute_input": "2022-07-11T15:46:45.764058Z",
+     "iopub.status.busy": "2022-07-11T15:46:45.763549Z",
+     "iopub.status.idle": "2022-07-11T15:46:47.523162Z",
+     "shell.execute_reply": "2022-07-11T15:46:47.522529Z",
+     "shell.execute_reply.started": "2022-07-11T15:46:45.764058Z"
+    },
+    "tags": []
    },
    "outputs": [],
    "source": [
     "import cvxpy as cp\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -34,15 +36,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 2,
    "id": "1126d1b8-f6e0-4b4d-b519-f20810b60705",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-06-24T19:14:34.080115Z",
-     "iopub.status.busy": "2022-06-24T19:14:34.080115Z",
-     "iopub.status.idle": "2022-06-24T19:14:34.139988Z",
-     "shell.execute_reply": "2022-06-24T19:14:34.139988Z",
-     "shell.execute_reply.started": "2022-06-24T19:14:34.080115Z"
+     "iopub.execute_input": "2022-07-11T15:46:04.855208Z",
+     "iopub.status.busy": "2022-07-11T15:46:04.855208Z",
+     "iopub.status.idle": "2022-07-11T15:46:04.936336Z",
+     "shell.execute_reply": "2022-07-11T15:46:04.935063Z",
+     "shell.execute_reply.started": "2022-07-11T15:46:04.855208Z"
     },
     "tags": []
    },
@@ -50,10 +52,10 @@
     {
      "data": {
       "text/plain": [
-       "15300.924068369666"
+       "15300.924351485446"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,22 +71,30 @@
     "\n",
     "objective_fn = 2500*D**2+12000*(A+1)+100*Pb\n",
     "constraints = [\n",
-    "  A >= (Pb+Pc)/483.307, Pb**2 == 100*Pc, Pc==R*h**2/D**2*1e-18, h==400e3, R==8e6]\n",
+    "  A >= (Pb+Pc)/483.307, Pb**2 == 100*Pc, Pc==R*h**2/D**2*1e-18, h>=400e3, R>=8e6]\n",
     "problem = cp.Problem(cp.Minimize(objective_fn), constraints)\n",
     "problem.solve(gp=True)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d2434fbd-86f4-43ef-b039-f0d6f4082cfc",
+   "metadata": {},
+   "source": [
+    "# Check the solution is tight"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 3,
    "id": "f894ac27-6288-403d-b6fc-848f0ffb4db3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-06-24T19:14:35.774647Z",
-     "iopub.status.busy": "2022-06-24T19:14:35.774647Z",
-     "iopub.status.idle": "2022-06-24T19:14:35.786172Z",
-     "shell.execute_reply": "2022-06-24T19:14:35.785160Z",
-     "shell.execute_reply.started": "2022-06-24T19:14:35.774647Z"
+     "iopub.execute_input": "2022-07-11T15:46:13.655050Z",
+     "iopub.status.busy": "2022-07-11T15:46:13.654546Z",
+     "iopub.status.idle": "2022-07-11T15:46:13.670036Z",
+     "shell.execute_reply": "2022-07-11T15:46:13.669533Z",
+     "shell.execute_reply.started": "2022-07-11T15:46:13.655050Z"
     },
     "tags": []
    },
@@ -92,115 +102,108 @@
     {
      "data": {
       "text/plain": [
-       "0.0408027023970882"
+       "(0.04080478132843842, 0.04080482220110736)"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "((Pb+Pc)/483.307).value"
+    "((Pb+Pc)/483.307).value, A.value"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19dfb46e-2d25-49d8-8d7b-acd0827b075e",
+   "metadata": {},
+   "source": [
+    "# Values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 17,
+   "id": "e67b96f2-7d8a-47eb-9736-3273a0893158",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-07-11T15:51:44.415269Z",
+     "iopub.status.busy": "2022-07-11T15:51:44.415269Z",
+     "iopub.status.idle": "2022-07-11T15:51:50.064729Z",
+     "shell.execute_reply": "2022-07-11T15:51:50.063494Z",
+     "shell.execute_reply.started": "2022-07-11T15:51:44.415269Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from compute import prettyprintval"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "id": "b27d7d67-75ce-4149-a65a-b9ff508559c6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-06-24T19:14:36.184899Z",
-     "iopub.status.busy": "2022-06-24T19:14:36.183909Z",
-     "iopub.status.idle": "2022-06-24T19:14:36.205881Z",
-     "shell.execute_reply": "2022-06-24T19:14:36.204883Z",
-     "shell.execute_reply.started": "2022-06-24T19:14:36.184899Z"
+     "iopub.execute_input": "2022-07-11T15:53:34.108388Z",
+     "iopub.status.busy": "2022-07-11T15:53:34.108388Z",
+     "iopub.status.idle": "2022-07-11T15:53:34.133531Z",
+     "shell.execute_reply": "2022-07-11T15:53:34.132316Z",
+     "shell.execute_reply.started": "2022-07-11T15:53:34.108388Z"
     },
     "tags": []
    },
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<style type=\"text/css\">\n",
+       "</style>\n",
+       "<table id=\"T_ebb1d\">\n",
+       "  <thead>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td id=\"T_ebb1d_row0_col0\" class=\"data row0 col0\" >$$A$$</td>\n",
+       "      <td id=\"T_ebb1d_row0_col1\" class=\"data row0 col1\" >0.041</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td id=\"T_ebb1d_row1_col0\" class=\"data row1 col0\" >$$D$$</td>\n",
+       "      <td id=\"T_ebb1d_row1_col1\" class=\"data row1 col1\" >0.67</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td id=\"T_ebb1d_row2_col0\" class=\"data row2 col0\" >$$h$$</td>\n",
+       "      <td id=\"T_ebb1d_row2_col1\" class=\"data row2 col1\" >4.000×10⁵</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td id=\"T_ebb1d_row3_col0\" class=\"data row3 col0\" >$$P_{comms}$$</td>\n",
+       "      <td id=\"T_ebb1d_row3_col1\" class=\"data row3 col1\" >2.847</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td id=\"T_ebb1d_row4_col0\" class=\"data row4 col0\" >$$P_{bus}$$</td>\n",
+       "      <td id=\"T_ebb1d_row4_col1\" class=\"data row4 col1\" >16.874</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td id=\"T_ebb1d_row5_col0\" class=\"data row5 col0\" >$$C$$</td>\n",
+       "      <td id=\"T_ebb1d_row5_col1\" class=\"data row5 col1\" >1.530×10⁴</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n"
+      ],
       "text/plain": [
-       "2.847044469061107"
+       "<pandas.io.formats.style.Styler at 0x16336180f40>"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Pc.value"
+    "variables = {'$$A$$':A, '$$D$$':D, '$$h$$':h, '$$P_{comms}$$':Pc, '$$P_{bus}$$':Pb, '$$C$$':problem.objective}\n",
+    "pd.DataFrame([(var_name, prettyprintval(var.value)) for var_name,var in variables.items()]).style.hide(axis=\"columns\").hide(axis=\"index\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "id": "1546bc4c-831d-46e4-92a5-e6ba38f39598",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-06-24T19:14:36.919512Z",
-     "iopub.status.busy": "2022-06-24T19:14:36.919512Z",
-     "iopub.status.idle": "2022-06-24T19:14:36.924779Z",
-     "shell.execute_reply": "2022-06-24T19:14:36.924501Z",
-     "shell.execute_reply.started": "2022-06-24T19:14:36.919512Z"
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2.8470444690611045"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(R*h**2/D**2*1e-18).value"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "id": "691ed650-8c74-4ec2-98e4-40f63395d0ab",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-06-24T19:14:37.200006Z",
-     "iopub.status.busy": "2022-06-24T19:14:37.199506Z",
-     "iopub.status.idle": "2022-06-24T19:14:37.207492Z",
-     "shell.execute_reply": "2022-06-24T19:14:37.206991Z",
-     "shell.execute_reply.started": "2022-06-24T19:14:37.200006Z"
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.670514014487346"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "D.value"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d7669206-fbb2-4b5f-be5c-f1910f33f2a4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -219,7 +222,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
