--- a/minimdo/rendering/DSM.ipynb
+++ b/minimdo/rendering/DSM.ipynb
@@ -485,6 +485,47 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "cbbe2903-ba73-469f-a10e-15959ac84de0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_patches(order, Stree, Vtree, branch):\n",
+    "    all_solvers_below = dfs_tree(Stree, branch)\n",
+    "    row_inter,col_inter,row_total,col_total = 0,0,0,0\n",
+    "    solvers_visited = set()\n",
+    "    beginnig_flag = True\n",
+    "    for comp_type,comp_idx,parent in order:\n",
+    "        if parent in all_solvers_below and beginnig_flag:\n",
+    "            upper_left_row, upper_left_col = row_total, col_total\n",
+    "            row_inter,col_inter,row_total,col_total = 0,0,0,0 # reset counter\n",
+    "            beginnig_flag = False\n",
+    "        if parent not in all_solvers_below and not beginnig_flag:\n",
+    "            break\n",
+    "        row_total+=1\n",
+    "        if comp_type == COMP:\n",
+    "            row_inter+=1\n",
+    "            col_inter+=1\n",
+    "            col_total+=1\n",
+    "        else:\n",
+    "            if parent != branch:\n",
+    "                row_inter+=1\n",
+    "            if parent not in solvers_visited:\n",
+    "                number_of_vars=len(list(solver_children(Vtree,parent)))\n",
+    "                if parent != branch:\n",
+    "                    col_inter+=number_of_vars\n",
+    "                col_total+=number_of_vars\n",
+    "                solvers_visited.add(parent)\n",
+    "    row_end = row_total-row_inter\n",
+    "    col_end = col_total-col_inter\n",
+    "    rect_inter = ((upper_left_row,upper_left_col), (row_inter,col_inter))\n",
+    "    rect_end = ((upper_left_row+row_inter,upper_left_col+col_inter), (row_end,col_end))\n",
+    "    rect_full = ((upper_left_row,upper_left_col), (row_total,col_total))\n",
+    "    return rect_inter, rect_end, rect_full"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 16,
    "id": "e4026c1a-bd59-45e5-b873-a5352b6a89bc",
    "metadata": {
@@ -636,7 +677,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
