--- a/minimdo/structure_optim/minfeedback.ipynb
+++ b/minimdo/structure_optim/minfeedback.ipynb
@@ -6,17 +6,17 @@
    "id": "9b54a3d1-0489-4f46-9d43-00143e02c969",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-06-28T02:18:18.563584Z",
-     "iopub.status.busy": "2022-06-28T02:18:18.563584Z",
-     "iopub.status.idle": "2022-06-28T02:18:20.460496Z",
-     "shell.execute_reply": "2022-06-28T02:18:20.460326Z",
-     "shell.execute_reply.started": "2022-06-28T02:18:18.563584Z"
+     "iopub.execute_input": "2022-07-12T14:07:54.160439Z",
+     "iopub.status.busy": "2022-07-12T14:07:54.159784Z",
+     "iopub.status.idle": "2022-07-12T14:07:57.174812Z",
+     "shell.execute_reply": "2022-07-12T14:07:57.173488Z",
+     "shell.execute_reply.started": "2022-07-12T14:07:54.160439Z"
     },
     "tags": []
    },
    "outputs": [],
    "source": [
-    "from testproblems import generate_random_prob\n",
+    "from testproblems import generate_random_prob, random_problem_with_artifacts\n",
     "from representations import bipartite_repr\n",
     "from inputresolver import resolve,invert_edges,getallvars,direct_eqs\n",
     "from datastructures.polycasebuilder import eqv_to_edges_tree\n",
@@ -31,11 +31,11 @@
    "id": "4bd7a66b-7e88-41bc-8e05-63d340f0be7d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-06-28T02:18:20.461513Z",
-     "iopub.status.busy": "2022-06-28T02:18:20.461513Z",
-     "iopub.status.idle": "2022-06-28T02:18:20.476765Z",
-     "shell.execute_reply": "2022-06-28T02:18:20.475875Z",
-     "shell.execute_reply.started": "2022-06-28T02:18:20.461513Z"
+     "iopub.execute_input": "2022-07-12T14:07:57.176578Z",
+     "iopub.status.busy": "2022-07-12T14:07:57.176578Z",
+     "iopub.status.idle": "2022-07-12T14:07:57.190298Z",
+     "shell.execute_reply": "2022-07-12T14:07:57.189642Z",
+     "shell.execute_reply.started": "2022-07-12T14:07:57.176578Z"
     },
     "tags": []
    },
@@ -54,11 +54,11 @@
    "id": "d6646871-2f0d-45ed-9bc2-977813180d6d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-06-28T02:18:20.477765Z",
-     "iopub.status.busy": "2022-06-28T02:18:20.477765Z",
-     "iopub.status.idle": "2022-06-28T02:18:20.492764Z",
-     "shell.execute_reply": "2022-06-28T02:18:20.491780Z",
-     "shell.execute_reply.started": "2022-06-28T02:18:20.477765Z"
+     "iopub.execute_input": "2022-07-12T14:07:57.192307Z",
+     "iopub.status.busy": "2022-07-12T14:07:57.192307Z",
+     "iopub.status.idle": "2022-07-12T14:07:57.205696Z",
+     "shell.execute_reply": "2022-07-12T14:07:57.204605Z",
+     "shell.execute_reply.started": "2022-07-12T14:07:57.192307Z"
     },
     "tags": []
    },
@@ -73,11 +73,11 @@
    "id": "ee568c85-54ed-435d-829f-de6eaa299df4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-06-28T02:18:20.494779Z",
-     "iopub.status.busy": "2022-06-28T02:18:20.494779Z",
-     "iopub.status.idle": "2022-06-28T02:18:20.508762Z",
-     "shell.execute_reply": "2022-06-28T02:18:20.507779Z",
-     "shell.execute_reply.started": "2022-06-28T02:18:20.494779Z"
+     "iopub.execute_input": "2022-07-12T14:07:57.207992Z",
+     "iopub.status.busy": "2022-07-12T14:07:57.207443Z",
+     "iopub.status.idle": "2022-07-12T14:07:57.221104Z",
+     "shell.execute_reply": "2022-07-12T14:07:57.219930Z",
+     "shell.execute_reply.started": "2022-07-12T14:07:57.207992Z"
     },
     "tags": []
    },
@@ -97,24 +97,152 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 5,
    "id": "98391050-2500-4142-9b5f-8d7ff4d572bc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-06-28T17:36:13.724005Z",
-     "iopub.status.busy": "2022-06-28T17:36:13.724005Z",
-     "iopub.status.idle": "2022-06-28T17:36:13.738005Z",
-     "shell.execute_reply": "2022-06-28T17:36:13.737007Z",
-     "shell.execute_reply.started": "2022-06-28T17:36:13.724005Z"
+     "iopub.execute_input": "2022-07-12T14:07:57.222225Z",
+     "iopub.status.busy": "2022-07-12T14:07:57.222225Z",
+     "iopub.status.idle": "2022-07-12T14:07:57.237631Z",
+     "shell.execute_reply": "2022-07-12T14:07:57.235836Z",
+     "shell.execute_reply.started": "2022-07-12T14:07:57.222225Z"
     },
     "tags": []
    },
    "outputs": [],
    "source": [
-    "n_eqs = 10\n",
-    "n_vars = 13\n",
+    "m = 50\n",
+    "n = 55\n",
     "seed = 10#8 is triang#seed 10 is nice 42\n",
-    "sparsity = 1.7#0.87#0.8 1.1 #1.7 1.3"
+    "sparsity = 1.5#0.87#0.8 1.1 #1.7 1.3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "469be3d2-52e2-44f2-9218-3db341ba8922",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-07-12T14:07:57.805469Z",
+     "iopub.status.busy": "2022-07-12T14:07:57.805469Z",
+     "iopub.status.idle": "2022-07-12T14:07:57.810471Z",
+     "shell.execute_reply": "2022-07-12T14:07:57.810471Z",
+     "shell.execute_reply.started": "2022-07-12T14:07:57.805469Z"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "kwargs = random_problem_with_artifacts(m,n,seed,sparsity)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "e5b9f451-8f1d-4a9f-9b1a-84704132d44f",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-07-12T14:07:58.096338Z",
+     "iopub.status.busy": "2022-07-12T14:07:58.095955Z",
+     "iopub.status.idle": "2022-07-12T14:07:58.111735Z",
+     "shell.execute_reply": "2022-07-12T14:07:58.110413Z",
+     "shell.execute_reply.started": "2022-07-12T14:07:58.096338Z"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "edges_varonleft = kwargs[\"edges_varonleft\"]\n",
+    "outset = kwargs[\"outset\"]\n",
+    "varidxs = kwargs[\"varidxs\"]\n",
+    "eqnidxs = kwargs[\"eqnidxs\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "dd5434df-8568-4f05-949e-c61b526e991d",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-07-12T14:07:59.805813Z",
+     "iopub.status.busy": "2022-07-12T14:07:59.805813Z",
+     "iopub.status.idle": "2022-07-12T14:08:42.744898Z",
+     "shell.execute_reply": "2022-07-12T14:08:42.743740Z",
+     "shell.execute_reply.started": "2022-07-12T14:07:59.805813Z"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Set parameter Username\n",
+      "Academic license - for non-commercial use only - expires 2023-02-25\n"
+     ]
+    }
+   ],
+   "source": [
+    "cycles, elimset, m = min_arc_set(edges_varonleft, outset, varidxs, eqnidxs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "ffdafb2e-69ec-47cb-9b17-a1b51330f2fb",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-07-12T14:09:00.979817Z",
+     "iopub.status.busy": "2022-07-12T14:09:00.979817Z",
+     "iopub.status.idle": "2022-07-12T14:09:01.004793Z",
+     "shell.execute_reply": "2022-07-12T14:09:01.004513Z",
+     "shell.execute_reply.started": "2022-07-12T14:09:00.979817Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{3, 7, 12, 14, 20, 25, 32, 36, 40, 41}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "elimset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "2ba1e897-aec9-4b08-b7d7-6cb939da30aa",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-07-12T14:07:23.061832Z",
+     "iopub.status.busy": "2022-07-12T14:07:23.061832Z",
+     "iopub.status.idle": "2022-07-12T14:07:23.092410Z",
+     "shell.execute_reply": "2022-07-12T14:07:23.091219Z",
+     "shell.execute_reply.started": "2022-07-12T14:07:23.061832Z"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{7, 12, 14, 20, 25, 27, 31, 32, 36, 40}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "elimset"
    ]
   },
   {
@@ -717,7 +845,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
