--- a/minimdo/polynomialsjl.ipynb
+++ b/minimdo/polynomialsjl.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "334adbd7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-05-04T11:33:24.808000-04:00",
-     "iopub.status.busy": "2022-05-04T11:33:24.808000-04:00",
-     "iopub.status.idle": "2022-05-04T11:33:45.579000-04:00",
-     "shell.execute_reply": "2022-05-04T11:33:45.579000-04:00"
+     "iopub.execute_input": "2022-07-11T22:09:31.285000-04:00",
+     "iopub.status.busy": "2022-07-11T22:09:30.132000-04:00",
+     "iopub.status.idle": "2022-07-11T22:10:17.568000-04:00",
+     "shell.execute_reply": "2022-07-11T22:10:17.404000-04:00"
     },
     "tags": []
    },
@@ -434,37 +434,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 8,
    "id": "ad566a33",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-04-18T15:36:01.771000-04:00",
-     "iopub.status.busy": "2022-04-18T15:36:01.771000-04:00",
-     "iopub.status.idle": "2022-04-18T15:36:01.778000-04:00",
-     "shell.execute_reply": "2022-04-18T15:36:01.777000-04:00"
+     "iopub.execute_input": "2022-07-11T22:16:34.815000-04:00",
+     "iopub.status.busy": "2022-07-11T22:16:34.815000-04:00",
+     "iopub.status.idle": "2022-07-11T22:16:35.191000-04:00",
+     "shell.execute_reply": "2022-07-11T22:16:35.190000-04:00"
     },
     "tags": []
    },
    "outputs": [],
    "source": [
-    "@var x_0, x_1, x_2, x_3, x_4, x_5, x_6, x_7, x_8, x_9, x_10, x_11, x_12\n",
-    "@var λ[1:10];\n",
-    "h0=-0.3*x_3*x_7*x_9 + 0.2*x_4*x_6 - 0.6;\n",
-    "h1=0.9*x_0*x_1*x_5 - 0.5;\n",
-    "h2=-0.3*x_1*x_11*x_4 - 0.7*x_10 - 0.8*x_12*x_2*x_6 - 0.6*x_5*x_7 - 0.3;\n",
-    "h3=-0.6*x_0*x_8 + 0.6*x_4*x_9 - 0.7;\n",
-    "h4=0.7*x_0*x_2*x_8 + 0.2*x_7 + 0.9;\n",
-    "h5=0.1*x_10*x_2*x_3 + 0.9*x_7*x_9 - 0.5;\n",
-    "h6=-0.3*x_10*x_12*x_7 + 0.8;\n",
-    "h7=-0.5*x_0*x_1 - 0.3*x_5*x_9 - 1.0;\n",
-    "h8=-0.4*x_0*x_7*x_8 - 0.9;\n",
-    "h9=-0.1*x_0 - 0.4*x_10*x_3 - 0.7;\n",
-    "vars=[x_0, x_1, x_2, x_3, x_4, x_5, x_6, x_7, x_8, x_9, x_10, x_11, x_12]\n",
-    "@var u[1:3];\n",
-    "h10=x_6-u[1]\n",
-    "h11=x_11-u[2]\n",
-    "h12=x_12-u[3]\n",
-    "h=[h0,h1,h2,h3,h4,h5,h6,h7,h8,h9,h10,h11,h12];"
+    "@var x_0, x_1, x_2, x_3, x_4, x_5, x_6, x_7, x_8, x_9, x_10, x_11, x_12, x_13, x_14, x_15, x_16, x_17, x_18, x_19, x_20, x_21, x_22, x_23\n",
+    "@var λ[1:20];\n",
+    "h0=-0.5*x_1*x_21 - 0.9;\n",
+    "h1=0.8*x_10*x_13 + 0.2*x_17 + 0.5;\n",
+    "h2=0.7*x_1*x_8 - 1.0*x_15*x_19 - 0.9;\n",
+    "h3=0.7*x_12*x_15*x_17 + 0.1*x_14 - 0.4;\n",
+    "h4=-0.9*x_10*x_3 - 0.8*x_16 + 0.3;\n",
+    "h5=-0.2*x_15*x_7*x_8 + 1.0*x_2 + 1.0;\n",
+    "h6=0.4*x_11*x_5*x_8 - 0.2;\n",
+    "h7=-0.7*x_15*x_20 + 0.4;\n",
+    "h8=0.8*x_16*x_18 + 0.9*x_17*x_19 - 0.3;\n",
+    "h9=-0.4*x_16*x_3 + 0.2;\n",
+    "h10=-0.5*x_14*x_4 + 0.2*x_17*x_18*x_9 - 0.8*x_23 + 0.7;\n",
+    "h11=-0.1*x_0*x_3 - 0.3*x_17*x_9 - 0.7*x_20*x_23 + 0.6;\n",
+    "h12=-0.2*x_13*x_9 - 0.6*x_14*x_2 - 0.8;\n",
+    "h13=-0.6*x_1 + 0.3*x_18*x_9 + 0.9;\n",
+    "h14=0.3*x_22*x_5*x_8 + 0.9;\n",
+    "h15=0.9 - 0.1*x_6;\n",
+    "h16=-0.1*x_11*x_13 + 0.2;\n",
+    "h17=-0.1*x_10*x_15*x_7 + 0.5*x_8 + 0.1;\n",
+    "h18=0.5*x_18*x_5 + 0.4*x_23 + 0.9;\n",
+    "h19=-0.8*x_12*x_23 + 0.5;\n",
+    "vars=[x_0, x_1, x_2, x_3, x_4, x_5, x_6, x_7, x_8, x_9, x_10, x_11, x_12, x_13, x_14, x_15, x_16, x_17, x_18, x_19, x_20, x_21, x_22, x_23]\n",
+    "dfdx=[0, 0, 0, x_3, 0, 0, 0, 0, x_8, 0, 0, 0, 0, 0, 0, 0, 0, x_17, 0, 0, 0, 0, 0, x_23]\n",
+    "h=[h0, h1, h2, h3, h4, h5, h6, h7, h8, h9, h10, h11, h12, h13, h14, h15, h16, h17, h18, h19];"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "b8356e16-e5db-4e7f-bf76-2da6c4ebefa6",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-07-11T22:16:35.390000-04:00",
+     "iopub.status.busy": "2022-07-11T22:16:35.389000-04:00",
+     "iopub.status.idle": "2022-07-11T22:16:35.592000-04:00",
+     "shell.execute_reply": "2022-07-11T22:16:35.591000-04:00"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "J = differentiate(h, vars);\n",
+    "kkt = [dfdx - J'*λ; h];"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "dac9c9e4-a1c0-459e-b873-84cceaee57fe",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-07-11T22:16:44.448000-04:00",
+     "iopub.status.busy": "2022-07-11T22:16:44.447000-04:00",
+     "iopub.status.idle": "2022-07-11T22:16:44.703000-04:00",
+     "shell.execute_reply": "2022-07-11T22:16:44.703000-04:00"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "Opt = System(kkt, variables = [vars; λ]);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed45b2a6-43f9-4488-9831-cb3a42fee1f3",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-07-11T22:17:03.271000-04:00",
+     "iopub.status.busy": "2022-07-11T22:17:03.271000-04:00"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mComputing mixed cells... 3 \t Time: 12:36:07\u001b[39m\n",
+      "\u001b[34m  mixed_volume:  6\u001b[39m"
+     ]
+    }
+   ],
+   "source": [
+    "res = solve(Opt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc3c861b-3edd-406b-b20f-c17c194dedb2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "real_sols = real_solutions(res);"
    ]
   },
   {
